// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`height Should parse (h-1) correctly 1`] = `
Object {
  "height": 4,
}
`;

exports[`height Should parse (h-2) correctly 1`] = `
Object {
  "height": 8,
}
`;

exports[`height Should parse (h-3) correctly 1`] = `
Object {
  "height": 12,
}
`;

exports[`height Should parse (h-4) correctly 1`] = `
Object {
  "height": 16,
}
`;

exports[`height Should parse (h-5) correctly 1`] = `
Object {
  "height": 20,
}
`;

exports[`height Should parse (h-6) correctly 1`] = `
Object {
  "height": 24,
}
`;

exports[`height Should parse (h-8) correctly 1`] = `
Object {
  "height": 32,
}
`;
